--- a/webapp/src/main/webapp/css/home.css
+++ b/webapp/src/main/webapp/css/home.css
@@ -3,38 +3,53 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     font-family: 'Lexend Deca', sans-serif;
 }
 
+:root {
+    --text: #4f5248;
+    --background: #fffef8;
+    --primary: #9ad379;
+    --secondary: #d8d8c5;
+    --accent: #6696e2;
+}
+
 body {
     margin: 0;
     padding: 0;
 }
+/*
+NAVBAR
+*/
+.square-button {
+    width: 40px; /* Adjust the width as needed */
+    height: 40px; /* Set the same height as the width for a square button */
 
+}
 .card {
-    background-color: #EDECEA;
+    background-color: var(--background);
 }
 .custom-navbar {
-    background-color: #77866D;
+    background-color: var(--primary);
 }
 
 .custom-btn {
-    background-color: #77866D;
+    background-color: var(--primary);
 }
 
 .navbar-brand {
     font-size: 32px;
-    color: #FFFEFD;
+    color: var(--background);
 }
 
 .volver-btn {
-    color: #626561;
+    color: var(--text);
 }
 
 .notification-icon {
     font-size: 26px;
-    color: #FFFEFD;
+    color: var(--background);
 }
 .user-icon {
     font-size: 30px;
-    color: #FFFEFD;
+    color: var(--background);
 }
 
 .home-container {
