--- a/webapp/src/main/webapp/css/post.css
+++ b/webapp/src/main/webapp/css/post.css
@@ -1,28 +1,33 @@
 .card-container {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
+    width: 100%;
+    border: 1px solid var(--secondary);
+    padding: 10px;
+    margin: 10px auto;
+    background-color: var(--onbackground);
     border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 /* Style for the post information */
-.post-info {
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #ccc;
-}
+
 
 /* Style for comments */
-.comments {
+.comments-section {
     margin-top: 20px;
 }
 
 /* Individual comment style */
+
 .comment {
-    margin-bottom: 10px;
-    padding: 10px;
-    border: 1px solid #ccc;
     border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 5px;
+    background-color: var(--darkonbackground);
+}
+
+.comment .comment-header {
+    font-weight: bold;
+}
+
+.comment .comment-body {
+    margin-top: 5px;
 }
