--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -10,14 +10,31 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --lighttext: #83887f;
     --background: #fdfaf1;
     --onbackground: rgb(245, 245, 244);
+    --onbackgroundfaded: rgb(245, 245, 244, 0.2);
     --darkonbackground : rgb(235, 236, 233);
     --primary: #9ad379;
-    --onprimary: var(--background);
+    --onprimary: #fdfaf1;
     --secondary: #d8d8c5;
     --accent: #6696e2;
     --error: #de6f6f;
     --scrollbarthumb: #687e62;
 }
+.dark-mode {
+    --text: #ced3c1;
+    --lighttext: #b1bbab;
+    --background: #333c41;
+    --onbackground: rgb(49, 58, 63);
+    --onbackgroundfaded: rgb(49, 58, 63, 0.2);
+    --darkonbackground : rgb(95, 96, 95);
+    --primary: #819b9b;
+    --onprimary: #29333a;
+    --secondary: #595953;
+    --accent: #6696e2;
+    --error: #de6f6f;
+    --scrollbarthumb: #687e62;
+}
+
+
 
 html::-webkit-scrollbar {
     width: 12px;
@@ -74,7 +91,7 @@ body {
 }
 .navbar-brand:hover {
     color: var(--background);
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.5); /* Adjust the values for the desired glow effect */
+    text-shadow: 0 0 5px var(--onbackgroundfaded); /* Adjust the values for the desired glow effect */
 }
 
 
@@ -91,12 +108,10 @@ body {
     color: var(--background);
 }
 
-
 .column {
     margin: 0;
     padding-top: 20px;
     padding-left: 20px;
-    /*box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);*/
 }
 
 .column-left{
@@ -115,7 +130,12 @@ body {
     overflow-y: auto;
 }
 
-
+@media (max-width: 768px) {
+    .column-left,
+    .column-right {
+        display: none;
+    }
+}
 
 
 .gray-box {
@@ -238,6 +258,7 @@ body {
     max-height: calc(1.2em * 10); /* Adjust the line height and number of lines as needed */
     overflow: hidden;
     position: relative;
+    color: var(--lighttext);
 }
 .post-description::after {
     content: "";
@@ -246,7 +267,7 @@ body {
     left: 0;
     width: 100%;
     height: 20px; /* Adjust the height to control the fade-out length */
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2), var(--onbackground));
+    background: linear-gradient(to bottom, var(--onbackgroundfaded), var(--onbackground));
 }
 .post-header {
     font-size: 16px;
@@ -359,6 +380,8 @@ h2{
     margin: 10px auto;
     background-color: var(--onbackground);
     border-radius: 10px;
+    color: var(--text);
+
 }
 .left-column-button:hover{
     width: 100%;
@@ -368,6 +391,7 @@ h2{
     margin: 10px auto;
     background-color: var(--onbackground);
     border-radius: 10px;
+    color: var(--text);
 }
 
 .left-column-button.active{
@@ -379,9 +403,14 @@ h2{
     background-color: var(--darkonbackground);
     border-radius: 10px;
 }
+.left-column-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
 
-
-/*--------------------------------------------------------------------------*/
+/*----------------------------WEATHER ------------------------------------*/
 
 .cardContainer {
     position: relative;
@@ -521,3 +550,4 @@ h2{
     cursor: pointer;
     margin-left: 5px;
 }
+
