--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -2,7 +2,7 @@
 
 
 body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
-    font-family: 'Lexend Deca', sans-serif;
+    font-family:'Segoe UI', Roboto, Oxygen, Ubuntu,   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 :root {
@@ -506,45 +506,41 @@ h2{
 .tags-input {
     display: inline-block;
     position: relative;
-    border: 1px solid var(--darkonbackground);
+    width: 100%;
+    border: 2px solid var(--bordercolor);
+    padding: 10px;
+    margin: 10px auto;
+    background-color: var(--onbackground);
+    border-radius: 10px;
+
+}
+
+.tags-input-wrapper{
+    background: transparent;
+    padding: 10px;
     border-radius: 4px;
-    padding: 5px;
-    box-shadow: 2px 2px 5px #00000033;
-    width: 50%;
+    max-width: 400px;
+    border: 1px solid #ccc
 }
-
-.tags-input ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+.tags-input-wrapper input{
+    border: none;
+    background: transparent;
+    outline: none;
+    width: 140px;
+    margin-left: 8px;
 }
-
-.tags-input li {
+.tags-input-wrapper .tag{
     display: inline-block;
     background-color: var(--accent);
-    color: var(--onprimary);
-    border-radius: 20px;
-    padding: 5px 10px;
+    color: white;
+    border-radius: 40px;
+    padding: 0px 3px 0px 7px;
     margin-right: 5px;
-    margin-bottom: 5px;
+    margin-bottom:5px;
+    box-shadow: 0 0px 0px -2px var(--accent);
 }
-
-.tags-input input[type="text"] {
-    border: none;
-    outline: none;
-    padding: 5px;
-    font-size: 14px;
-}
-
-.tags-input input[type="text"]:focus {
-    outline: none;
-}
-
-.tags-input .delete-button {
-    background-color: transparent;
-    border: none;
-    color: var(--onprimary);
+.tags-input-wrapper .tag a {
+    margin: 0 7px 3px;
+    display: inline-block;
     cursor: pointer;
-    margin-left: 5px;
 }
-
