--- a/services/src/main/resources/templates/template-thymeleaf.html
+++ b/services/src/main/resources/templates/template-thymeleaf.html
@@ -134,7 +134,7 @@
                                             <td class="pad" style="padding-bottom:10px;padding-left:30px;padding-right:30px;padding-top:10px;">
                                                 <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;line-height:150%;text-align:left;mso-line-height-alt:24px;">
                                                     <p style="margin: 0; word-break: break-word;">&nbsp;</p>
-                                                    <p style="margin: 0;" th:text="'Theres a new comment on ' + ${postTitle} + '!'"></p>
+                                                    <p style="margin: 0;" th:text="'There is a new comment on ' + ${postTitle} + '!'"></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -177,7 +177,7 @@
                                         <tr>
                                             <td class="pad" style="padding-bottom:40px;padding-left:20px;padding-right:20px;">
                                                 <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:16px;letter-spacing:0px;line-height:150%;text-align:left;mso-line-height-alt:24px;">
-                                                    <p style="margin: 0; word-break: break-word;"><span>CLICK IT!!!!!!!!!!!!!!!<br></span></p>
+                                                    <p style="margin: 0; word-break: break-word;"><span>See what's new on neibo!<br></span></p>
                                                 </div>
                                             </td>
                                         </tr>
@@ -209,7 +209,7 @@
                                         <tr>
                                             <td class="pad" style="padding-bottom:40px;padding-left:30px;padding-right:30px;padding-top:40px;">
                                                 <div style="color:#2f2f2f;font-family:Arial, Helvetica Neue, Helvetica, sans-serif;font-size:14px;line-height:150%;text-align:center;mso-line-height-alt:21px;">
-                                                    <p style="margin: 0; word-break: break-word;"><span><span style="color: #000000;">*If you click the button and suffer from a DDOS attack we will not be held liable</span><span style="color: #000000;">.</span></span></p>
+                                                    <p style="margin: 0; word-break: break-word;"><span><span style="color: #000000;">*Click here to unsuscribe from this post</span><span style="color: #000000;">.</span></span></p>
                                                 </div>
                                             </td>
                                         </tr>
