--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1,12 +1,10 @@
-/* --------------- globals----------------------*/
+/* --------------- GLOBALS ----------------------*/
 
 
 body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
-    /*font-family:'Segoe UI', Roboto, Oxygen, Ubuntu,   Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-*/
     font-family: 'Lexend Deca', sans-serif;
 }
-/* --------------- globals----------------------*/
+
 
 
 
@@ -38,10 +36,9 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --accent: #6696e2;
     --error: #de6f6f;
     --scrollbarthumb: #687e62;
-    --bordercolor: #70706d;
+    --bordercolor: #646462;
 
 }
-
 
 
 html::-webkit-scrollbar {
@@ -75,47 +72,20 @@ body {
     background-color: var(--background);
 }
 
-/*-------------------------------NAVBAR-----------------------------*/
-.square-button {
-    width: 40px; /* Adjust the width as needed */
-    height: 40px; /* Set the same height as the width for a square button */
-
-}
-
-.card {
-    background-color: var(--background);
-}
-.custom-navbar {
-    background-color: var(--primary);
-}
-
-.custom-btn {
-    background-color: var(--primary);
-}
-
-.navbar-brand {
-    font-size: 32px;
-    color: var(--background);
-}
-.navbar-brand:hover {
-    color: var(--background);
-    text-shadow: 0 0 5px var(--onbackgroundfaded); /* Adjust the values for the desired glow effect */
-}
-
-
-.volver-btn {
+i {
     color: var(--text);
 }
 
-.notification-icon {
-    font-size: 26px;
-    color: var(--background);
-}
-.user-icon {
-    font-size: 30px;
-    color: var(--background);
+h2{
+    font-size: 24px;
+    font-weight: bold;
+    color: var(--text);
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
+/*----------------------- GRID DISPLAY ------------------------------------*/
 .column {
     margin: 0;
     padding-top: 20px;
@@ -145,60 +115,39 @@ body {
     }
 }
 
-
-.gray-box {
-    background-color: #ccc;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-
-
-
-
-.post-header h3 {
-    font-size: 24px;
-    margin-top: 5px;
-}
-
-.post-body p {
-    font-size: 18px;
-    color: #444;
-}
-
-.filter-bar {
-    background-color: #f2f2f2;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    display: flex;
-    align-items: center;
-}
-
-.filter-bar span {
-    font-weight: bold;
-    margin-right: 10px;
-}
-
-.icon-button {
-    text-decoration: none;
-    padding: 5px 10px;
-    margin-right: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: 1px solid #007bff;
+/*-------------------------------NAVBAR-----------------------------*/
+.square-button {
+    width: 40px; /* Adjust the width as needed */
+    height: 40px; /* Set the same height as the width for a square button */
+    border: 1px solid var(--bordercolor);
+    background-color: var(--background);
     border-radius: 5px;
-    transition: background-color 0.2s ease;
 }
 
-.icon-button:hover {
-    background-color: #0056b3;
+.card {
+    background-color: var(--background);
+}
+.custom-navbar {
+    background-color: var(--primary);
 }
 
-.icon-button i {
-    font-size: 20px;
+.custom-btn {
+    background-color: var(--primary);
 }
 
-/*Middle column*/
+.navbar-brand {
+    font-size: 32px;
+    color: var(--background);
+}
+.navbar-brand:hover {
+    color: var(--background);
+    text-shadow: 0 0 5px var(--onbackgroundfaded); /* Adjust the values for the desired glow effect */
+}
+
+
+
+
+/*---------------------------------- Middle column ---------------------------------------------*/
 .filter-options {
     border: 2px solid var(--bordercolor);
     padding: 10px;
@@ -239,7 +188,7 @@ body {
     cursor: pointer;
 }
 
-/* Posts CSS*/
+/* ----------------------------------------------------- Posts CSS-------------------------------------------------*/
 .blogpost {
     width: 100%;
     border: 2px solid var(--bordercolor);
@@ -296,14 +245,6 @@ body {
     color: var(--primary);
 }
 
-h2{
-    font-size: 24px;
-    font-weight: bold;
-    color: var(--text);
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
 
 .post-info {
     font-size: 16px;
@@ -320,9 +261,6 @@ h2{
 .error {
     color: var(--error);
 }
-
-
-
 
 
 /*-------------------------POSTCARD ---------------------------*/
@@ -549,4 +487,9 @@ h2{
     margin: 0 7px 3px;
     display: inline-block;
     cursor: pointer;
+}
+
+
+.return-btn {
+    color: var(--text);
 }
