--- a/webapp/src/main/webapp/resources/css/error.css
+++ b/webapp/src/main/webapp/resources/css/error.css
@@ -2,7 +2,7 @@
 
 
 .error-card {
-    width: 500px; /* Set a fixed width */
+    width: 500px;
     height: 600px;
     border: 3px solid var(--error);
     padding: 10px;
@@ -75,6 +75,6 @@
 
 .options{
     z-index: 3;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); /* Adjust the shadow values as needed */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
 
 }
