Show a placeholder for 1 sec
Placeholder for 1 sec before actual blogposts are shown

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -189,7 +189,7 @@ h2{
     cursor: pointer;
 }
 
-/* ----------------------------------------------------- Posts CSS-------------------------------------------------*/
+/* ----------------------------------------------------- BlogPosts CSS-------------------------------------------------*/
 
 .blogpost {
     width: 100%;
@@ -280,6 +280,11 @@ h2{
 
 .error {
     color: var(--error);
+}
+/*------------------- PLACEHOLDER -----------------------------------*/
+
+.placeholder{
+    margin:1px auto;
 }
 
 /*-------------------------POSTCARD ---------------------------*/
