--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -15,12 +15,12 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --onbackground: rgb(248, 248, 243);
     --onbackgroundfaded: rgb(245, 245, 244, 0.2);
     --darkonbackground : rgb(235, 236, 233);
-    --primary: #9bdc83;
+    --primary: #9bd375;
     --onprimary: #fdfaf1;
     --secondary: #d8d8c5;
     --accent: #6696e2;
     --error: #de6f6f;
-    --scrollbarthumb: #9bdc83;
+    --scrollbarthumb: #809d60;
     --bordercolor: #dadad0;
 }
 .dark-mode {
@@ -285,6 +285,7 @@ h2{
 
 .placeholder{
     margin:1px auto;
+    border-radius: 3px;
 }
 
 /*-------------------------POSTCARD ---------------------------*/
@@ -508,7 +509,67 @@ h2{
 .return-btn {
     color: var(--text);
 }
+/* IMAGEN */
 
+.drop-container {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px dashed var(--lighttext);
+    color: var(--text);
+    cursor: pointer;
+    transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.drop-container:hover,
+.drop-container.drag-active {
+    background: var(--darkonbackground);
+    border-color: var(--primary);
+}
+
+.drop-container:hover .drop-title,
+.drop-container.drag-active .drop-title {
+    color: var(--text);
+}
+
+.drop-title {
+    color: var(--text);
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    transition: color .2s ease-in-out;
+}
+
+input[type=file] {
+    width: 350px;
+    max-width: 100%;
+    color: var(--text);
+    padding: 5px;
+    background: var(--background);
+    border-radius: 10px;
+    border: 1px solid var(--bordercolor);
+}
+
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: var(--text);
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: var(--background);
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+}
+
+input[type=file]::file-selector-button:hover {
+    background: var(--primary);
+}
 /*-------------------PAGINATION SELECTOR -----------------------------------*/
 .pagination {
     display: flex;
@@ -562,7 +623,7 @@ footer {
     bottom:0;
 }
 footer div {
-    background-color:var(--background);
+    background-color:var(--primary);
     margin: -5px 0 0 0;
     color: #fff;
     text-align:center;
@@ -572,7 +633,7 @@ footer div {
 .wave-footer {
     animation: wave-footer 3s linear;
     animation-iteration-count:infinite;
-    fill: var(--scrollbarthumb);
+    fill: var(--primary);
 }
 
 
