--- a/services/src/main/resources/templates/template-thymeleaf.html
+++ b/services/src/main/resources/templates/template-thymeleaf.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office" lang="en">
+<html lang="en">
 
 <head>
     <title></title>
