Show empt box when there are no posts
Added a default "no posts found" box when there are no posts

--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -284,6 +284,13 @@ h2{
     font-size: 14px;
 }
 
+.no-posts-found{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 .error {
     color: var(--error);
 }
