--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -285,12 +285,27 @@ h2{
 }
 
 .no-posts-found{
+    width: 100%;
+    height: 300px;
+    border: 2px solid var(--bordercolor);
+    padding: 20px;
+    margin: 10px auto;
+    background-color: var(--onbackground);
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-
+.circle-icon {
+    border: var(--text) 2px solid;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .error {
     color: var(--error);
 }
