--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -490,9 +490,28 @@ h2{
 }
 
 /*-------------------------------------PUBLISH/TAG INPUT------------------------*/
+.form-column{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+}
+.form-group{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.form-input{
+    width: 50%;
+    margin: 5px;
+}
 
 .tags-input {
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     position: relative;
     width: 100%;
     border: 2px solid var(--bordercolor);
