--- a/webapp/src/main/webapp/resources/css/commons.css
+++ b/webapp/src/main/webapp/resources/css/commons.css
@@ -26,7 +26,9 @@ body, p, h1, h2, h3, h4, h5, h6, label, input, select, textarea, button {
     --scrollbarthumb: #004F2D;
     --bordercolor: #dadad0;
 
+    --border-light: 5px;
     --border-radius: 10px;
+    --border-hard: 50px;
 }
 .dark-mode {
     --text: #ced3c1;
@@ -98,4 +100,8 @@ h3{
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+form{
+    margin-block-end: 0;
 }
