--- a/webapp/src/main/webapp/resources/css/home.css
+++ b/webapp/src/main/webapp/resources/css/home.css
@@ -1,6 +1,3 @@
-/* --------------- GLOBALS ----------------------*/
-
-
 
 /*----------------------- GRID DISPLAY ------------------------------------*/
 
@@ -640,3 +637,25 @@ footer div {
 
 /*-------------------------------------------------Landing page , login, log in, home --------------------*/
 
+.cool-button {
+    text-align: center;
+    font-weight: normal;
+    overflow: hidden;
+    width: 200px;
+    background-color: var(--background);
+    color: var(--primary);
+    border: 1px solid var(--primary);
+    border-radius: var(--border-hard);
+    padding: 1em 2em;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 0 0 var(--primary);
+}
+
+.cool-button:hover ,
+.cool-button:active ,
+.cool-button:focus {
+    transform: translateY(-4px) ;
+    box-shadow: 0 5px 0 0 var(--primary);
+    color: var(--primary);
+}
